<resources>
    <string name="app_name">MLB Teams</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="seasonSelectorLbl">Season</string>
    <string name="retryLoading">Retry</string>
    <string name="teamsLabel">Teams</string>
    <string name="rosterLabel">Roster</string>
    <string name="retry">RETRY</string>
    <string name="error">An error occurred when loading Teams. Please check your Internet connection and try again.</string>
    <string name="noDataTeam">No Teams information available for the season.</string>
    <string name="rosterError">An error occurred when loading Roster. Please check your Internet connection and try again.</string>
    <string name="noDataRoster">No Roster information available for the Team and Season.</string>
    <string name="playerError">An error occurred when loading Player Information. Please check your Internet connection and try again.</string>
    <string name="cf">Center Field</string>
    <string name="player_position">Player position</string>
    <string name="bats">BATS</string>
    <string name="left">LEFT</string>
    <string name="right">RIGHT</string>
    <string name="throws_hand">THROWS</string>
    <string name="rosterYears"><b>Seasons:</b> [%1$s]</string>
    <string name="rosterHeaderLbl">%1$s - %2$s</string>
    <string name="team_logo">Team Logo</string>
    <string name="playerLocationLbl">%1$s, %2$s</string>
    <string name="playerHeightLbl">%1$s,%2$s\"</string>
    <string name="playerWeightLbl">%1$s lb</string>
    <string name="settings_seasonCount_title">Number of available seasons</string>
    <string name="settings_seasonCount_hint">The number of available seasons, starting from current year</string>
    <string name="settings_lastCacheDate_title">Last cache date</string>
    <string name="settings_lastCacheDate_hint">Last date when the retrieved data was cached</string>
    <string name="settingLabel">Settings</string>
    <string name="settings_dataDuration_tittle">Data duration</string>
    <string name="about_mlb_teams_players"><![CDATA[MLB Teams & Players]]></string>
    <string name="about_info">Shows information about teams and players in MLB seasons. All of the data is property of MLB/MLB Advanced Media.</string>
    <string name="about_powered_by">Powered by <a href="https://appac.github.io/mlb-data-api-docs">MLB Data API</a></string>
    <string name="aboutLabel">About</string>
    <string name="mlb_logo">MLB Logo</string>
    <string name="developed_by">Developed by <a href="mailto:nonofce@gmail.com">Nono Francisco Carballo Escalona</a> at Architect Coders program.</string>
    <string name="playerLabel">Player</string>
    <string name="noLocalTeamFound">No team found locally for selected season</string>
</resources>
