<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:hint="@string/settings_seasonCount_hint"
        android:key="seasonsCount"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/settings_seasonCount_title"
        app:useSimpleSummaryProvider="true"/>

    <EditTextPreference
        android:key="dataDuration"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/settings_dataDuration_tittle"
        app:useSimpleSummaryProvider="true"/>

    <Preference
        android:key="lastCacheDate"
        android:title="@string/settings_lastCacheDate_title"
        android:hint="@string/settings_lastCacheDate_hint"/>
</PreferenceScreen>