<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="player"
            type="com.nonofce.android.mlbteams.model.roster.Row" />

    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/playerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="3dp"
                android:drawablePadding="5dp"
                android:gravity="top"
                android:text="@{player.name_first_last}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/baseball_diamond"
                    android:layout_width="100dp"
                    android:layout_height="100dp">


                    <com.caverock.androidsvg.SVGImageView
                        android:id="@+id/SVGImageView2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_baseball_diamond_clean"
                        tools:layout_editor_absoluteX="0dp"
                        tools:layout_editor_absoluteY="0dp" />

                    <ImageView
                        android:id="@+id/cf"
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_marginStart="44dp"
                        android:layout_marginTop="16dp"
                        android:contentDescription="@string/player_position"
                        android:visibility="gone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:playerPosition="@{player.primary_position}"
                        app:srcCompat="@drawable/ic_player_position_24dp" />

                    <ImageView
                        android:id="@+id/lf"
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:contentDescription="@string/player_position"
                        android:visibility="gone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:playerPosition="@{player.primary_position}"
                        app:srcCompat="@drawable/ic_player_position_24dp" />

                    <ImageView
                        android:id="@+id/rf"
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_marginStart="72dp"
                        android:layout_marginTop="24dp"
                        android:contentDescription="@string/player_position"
                        android:visibility="gone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:playerPosition="@{player.primary_position}"
                        app:srcCompat="@drawable/ic_player_position_24dp" />

                    <ImageView
                        android:id="@+id/b1"
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_marginStart="65dp"
                        android:layout_marginTop="56dp"
                        android:contentDescription="@string/player_position"
                        android:visibility="gone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:playerPosition="@{player.primary_position}"
                        app:srcCompat="@drawable/ic_player_position_24dp" />

                    <ImageView
                        android:id="@+id/b2"
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_marginStart="56dp"
                        android:layout_marginTop="40dp"
                        android:contentDescription="@string/player_position"
                        android:visibility="gone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:playerPosition="@{player.primary_position}"
                        app:srcCompat="@drawable/ic_player_position_24dp" />

                    <ImageView
                        android:id="@+id/ss"
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_marginStart="33dp"
                        android:layout_marginTop="40dp"
                        android:contentDescription="@string/player_position"
                        android:visibility="gone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:playerPosition="@{player.primary_position}"
                        app:srcCompat="@drawable/ic_player_position_24dp" />

                    <ImageView
                        android:id="@+id/b3"
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_marginStart="27dp"
                        android:layout_marginTop="56dp"
                        android:contentDescription="@string/player_position"
                        android:visibility="gone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:playerPosition="@{player.primary_position}"
                        app:srcCompat="@drawable/ic_player_position_24dp" />

                    <ImageView
                        android:id="@+id/p"
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_marginStart="45dp"
                        android:layout_marginTop="55dp"
                        android:contentDescription="@string/player_position"
                        android:visibility="gone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:playerPosition="@{player.primary_position}"
                        app:srcCompat="@drawable/ic_player_position_24dp" />

                    <ImageView
                        android:id="@+id/c"
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_marginStart="44dp"
                        android:layout_marginTop="71dp"
                        android:contentDescription="@string/player_position"
                        android:visibility="gone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:playerPosition="@{player.primary_position}"
                        app:srcCompat="@drawable/ic_player_position_24dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:baselineAligned="false">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginStart="8dp"
                            android:layout_weight="1"
                            android:padding="3dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/bats"
                                android:gravity="center_horizontal"/>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:padding="3dp">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/left"
                                    android:gravity="center_horizontal"
                                    android:layout_weight="1"/>

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/right"
                                    android:gravity="center_horizontal"
                                    android:layout_weight="1"/>

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:padding="3dp">

                                <ImageView
                                    android:id="@+id/bats_l"
                                    android:layout_width="12dp"
                                    android:layout_height="12dp"
                                    android:contentDescription="@string/player_position"
                                    app:srcCompat="@drawable/ic_player_position_24dp"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_weight="1"
                                    app:batPosition="@{player.bats}"
                                    android:visibility="gone"/>

                                <ImageView
                                    android:id="@+id/bats_r"
                                    android:layout_width="12dp"
                                    android:layout_height="12dp"
                                    android:contentDescription="@string/player_position"
                                    app:srcCompat="@drawable/ic_player_position_24dp"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_weight="1"
                                    app:batPosition="@{player.bats}"
                                    android:visibility="gone"/>

                            </LinearLayout>

                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginStart="8dp"
                            android:layout_weight="1"
                            android:padding="3dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/throws_hand"
                                android:gravity="center_horizontal"/>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:padding="3dp">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/left"
                                    android:gravity="center_horizontal"
                                    android:layout_weight="1"/>

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/right"
                                    android:gravity="center_horizontal"
                                    android:layout_weight="1"/>

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:padding="3dp">

                                <ImageView
                                    android:id="@+id/throws_l"
                                    android:layout_width="12dp"
                                    android:layout_height="12dp"
                                    android:contentDescription="@string/player_position"
                                    app:srcCompat="@drawable/ic_player_position_24dp"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_weight="1"
                                    app:throwHand="@{player.throws}"
                                    android:visibility="gone"/>

                                <ImageView
                                    android:id="@+id/throws_r"
                                    android:layout_width="12dp"
                                    android:layout_height="12dp"
                                    android:contentDescription="@string/player_position"
                                    app:srcCompat="@drawable/ic_player_position_24dp"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_weight="1"
                                    app:throwHand="@{player.throws}"
                                    android:visibility="gone"/>

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:roster_years="@{player.roster_years}"
                        android:layout_marginStart="8dp"/>

                </LinearLayout>





            </LinearLayout>


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>